# web-resume

./: .gitignore  .pre-commit-config.yaml  compose.override.yaml  compose.yaml  docker-compose.yml  nginx.conf  production.yaml
.github/workflows/: deploy.yaml  deploy.yml
backend/: .pylintrc  Dockerfile  manage.py  pyproject.toml
backend/app/: settings.py  urls.py
backend/content/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/content/migrations/: 0001_initial.py  0002_auto_20241225_2036.py
backend/descriptions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/descriptions/migrations/: 0001_initial.py  0002_description_page_reference.py  0003_rename_page_reference_description_page.py  0004_alter_description_page.py  0005_auto_20241126_2133.py  0006_page_section_delete_description.py
backend/email_service/: serializers.py  tests.py  urls.py  views.py
frontend/: .eslintrc.js  .gitignore  Dockerfile  package-lock.json  package.json  resolveTest.js
frontend/nginx/: default.conf
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  constants.ts  constants.tsx  fixtureData.json  i18n.ts  index.css  index.tsx  routesConfig.tsx  setupTests.ts  slider-styles.css  theme.tsx
frontend/src/components/: AboutMe.tsx  CardLayout.tsx  Contact.tsx  ContactChildren.tsx  Content.tsx  Description.tsx  Descriptions.tsx  DetailedParagraphs.tsx  DisplayData.tsx  Errors.tsx  ExperienceTimeline.tsx  Footer.tsx  GenericCard.tsx  GenericPage.tsx  Header.tsx  Home.tsx  Infosys.tsx  InfosysBHP.tsx  Logo.tsx  (+11 more)
(+9 files in other folders)
