[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Josh K <keisler@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.5.0"
psycopg2-binary = "^2.9.10"
pylint = "^3.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
safety = "^3.2.8"
coverage = "^7.6.3"
pylint-django = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
